# million-checkboxes-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-prod.yaml  docker-compose.yaml
migrations/: 0001_from_1_bit_to_4_bits.rs  0002_40_to_50_on_each_row.rs
src/: dotenv.rs  main.rs
src/db/: cache.rs
src/routes/: bits.rs  mod.rs  ws.rs
