[package]
name = "million_checkboxes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
#flate2 = "1.0.31"
futures = "0.3.30"
redis = { version = "0.26.1", features = ["tokio-comp"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors"] }
