[package]
name = "million_checkboxes"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
dotenvy = "0.15.7"
futures = "0.3.30"
redis = { version = "0.26.1", features = ["tokio-comp"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors"] }

[[bin]]
name = "migration_0001"
path = "migrations/0001_from_1_bit_to_4_bits.rs"

[[bin]]
name = "migration_0002"
path = "migrations/0002_40_to_50_on_each_row.rs"